--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,8 @@
 MONGODB_URI=mongodb://localhost:27017
 MONGODB_DB=nikul_pharma
 PORT=5174
+
+
+ADMIN_USER=admin@example.com
+ADMIN_PASS=admin
+SESSION_SECRET=some_very_strong_secret_key
