--- a/.env
+++ b/.env
@@ -1,4 +1,7 @@
 MONGODB_URI=mongodb://127.0.0.1:27017
 MONGODB_DB=nikul_pharma
-PORT=3001
-VITE_API_BASE_URL=http://localhost:3001
+PORT=5174
+VITE_API_BASE_URL=http://localhost:5174
+
+VITE_ADMIN_USER=admin@example.com
+VITE_ADMIN_PASS=admin
