--- a/server/package.json
+++ b/server/package.json
@@ -8,10 +8,12 @@
     "init-db": "node init-db.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "mongoose": "^8.0.0",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "express-session": "^1.18.2",
+    "mongoose": "^8.0.0",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
