--- a/server/.env
+++ b/server/.env
@@ -1,4 +1,6 @@
-MONGODB_URI=mongodb://localhost:27017
+MONGODB_URI=mongodb://127.0.0.1:27017/nikul_pharma
+odb.net/nikul_pharma
+# MONGODB_URI=mongodb+srv://username:password@cluster0.mong
 MONGODB_DB=nikul_pharma
 PORT=5174
 
