--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
-MONGODB_URI=mongodb://127.0.0.1:27017
+# MONGODB_URI=mongodb://127.0.0.1:27017
+MONGODB_URI=mongodb://127.0.0.1:27017/nikul_pharma
 MONGODB_DB=nikul_pharma
 PORT=5174
 VITE_API_BASE_URL=http://localhost:5174
