--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js",
-    "init-db": "node init-db.js"
+    "init-db": "node init-db.js",
+    "generate-sitemap": "node generate-sitemap.js"
   },
   "dependencies": {
     "axios": "^1.12.2",
@@ -15,6 +16,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-rate-limit": "^8.2.1",
     "express-session": "^1.18.2",
     "geoip-lite": "^1.4.10",
     "mongoose": "^8.0.0",
