--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,11 +17,19 @@ jobs:
           key: ${{ secrets.VPS_SSH_KEY }}
           port: 22
           script: |
+            set -e
             cd /var/www/nikulpharma
-            git pull origin main
+            echo "📥 Fetching latest code..."
+            git fetch origin master
+            git reset --hard origin/master
+            echo "📦 Installing dependencies..."
             npm ci
+            echo "🏗️ Building frontend..."
             npm run build
+            echo "🗺️ Generating sitemap..."
             cd server && npm ci --production && npm run generate-sitemap && cd ..
+            echo "🔄 Restarting server..."
             pm2 restart nikulpharma-server
             sudo systemctl reload nginx
             echo "✅ Deployment successful!"
+            git log -1 --oneline
