Fix Changes discussed in meeting

--- a/.env
+++ b/.env
@@ -3,8 +3,10 @@ MONGODB_URI=mongodb://127.0.0.1:27017/nikul_pharma
 MONGODB_DB=nikul_pharma
 PORT=5174
 # For development, use localhost
-# VITE_API_BASE_URL=http://localhost:5174
+VITE_API_BASE_URL=http://localhost:5174
 # For production, leave empty or comment out to use same-origin
 
 VITE_ADMIN_USER=admin@example.com
 VITE_ADMIN_PASS=admin
+VITE_YOUTUBE_HANDLE=@nikulpharmaequipment
+VITE_YOUTUBE_CHANNEL_ID=UCIzdw9YfFVaVQgxdcTAyoMw
