--- a/server/package.json
+++ b/server/package.json
@@ -21,7 +21,8 @@
     "geoip-lite": "^1.4.10",
     "mongoose": "^8.0.0",
     "morgan": "^1.10.0",
-    "ngrok": "^5.0.0-beta.2"
+    "ngrok": "^5.0.0-beta.2",
+    "path": "^0.12.7"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
