--- a/.env
+++ b/.env
@@ -3,7 +3,9 @@ MONGODB_URI=mongodb://127.0.0.1:27017/nikul_pharma
 MONGODB_DB=nikul_pharma
 PORT=5174
 # For development, use localhost
-VITE_API_BASE_URL=http://localhost:5174
+# VITE_API_BASE_URL is intentionally disabled in production builds.
+# Use Vite dev proxy for local development and same-origin in production.
+# VITE_API_BASE_URL=
 # For production, leave empty or comment out to use same-origin
 
 VITE_ADMIN_USER=admin@example.com
